--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "dist/index.js",
+  "engines": {"node": "20.x"}
   "scripts": {
     "start": "node dist/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
   },
   "keywords": [],
   "author": "",
