--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,15 @@
  "version": 2,
  "builds": [
   {
-   "src": "index.ts",
+   "src": "index.js",
    "use": "@vercel/node",
+   "config": { "includeFiles": ["dist/**"] }
   }
  ],
  "routes": [
   {
    "src": "/(.*)",
-   "dest": "index.ts"
+   "dest": "index.js"
   }
  ]
 }
