--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "dist/index.js",
-  "engines": {"node": "20.x"}
+  "engines": {"node": "20.x"},
   "scripts": {
     "start": "node dist/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
